--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url(nomalize.css);     
+@charset "utf-8";   
 body{
     background-color: rgb(193, 243, 255);
     color: blueviolet; 
@@ -8,15 +8,32 @@ h1{
     width: 300px;
     margin: 40px auto;
     padding: 30px;
-    border: 5px solod salmon;
+    border: 5px solod rgb(60, 10, 5);
     background-color: antiquewhite;
     color: brown;
     font-size: 300%;
     text-align: center;
     line-height:1;
 }
-#container{
-    idth: 980px;
-    background-color: rgb(194, 194, 240);
+main{
+    width:980px;
+    background-color: rgb(255, 255, 255);
     margin:0px auto;
+    padding:40px 80px;
+    border:1px soild #f6bb9e
+
+}
+h2{
+    padding:10px;
+    margin-bottom: 30px;
+    border:1px dottted #94c8b1;
+    border-left: 10px soild darkkhaki;
+    color: #6fbb9a
+
+}
+.round{
+    border-radius: 50%;
+}
+h1,header,footer,nav{
+    text-align: center;
 }
