--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ h1{
     line-height:1;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-attachment: fixed;
+    background-position: right top;
+    background-repeat: no-repeat;
     
 }
 main{
