--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @charset "utf-8";   
+
 body{
-    background-color: rgb(193, 243, 255);
+    background-color: rgb(253, 255, 235);
     background-image: url(img/網頁背景.jpg);
     background-attachment: fixed;
     background-size: 1550px 230px;
@@ -8,33 +9,45 @@ body{
     color: blueviolet; 
     margin: 0px;
 }
+
 h1{
-    text-shadow: 1px 1px 2px #f6bb9e;
-    box-shadow: 0 0 10px #f38f5d;
-    background-image: linear-gradient(to bottom,#fbfbfb,rgb(203, 73, 17));
-    width: 300px;
-    margin: 40px auto;
-    padding: 30px;
-    border: 5px solid rgb(247, 194, 142);
+    /*標題文字設定*/
     background-color: antiquewhite;
-    color: rgb(143, 93, 57);
+    color: rgb(172, 103, 0);
     font-size: 300%;
     text-align: center;
     line-height:1;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /*標題邊框設定*/
+    margin: 40px auto;
+    padding: 30px;
+    border: 5px solid rgb(227, 146, 65);
+    width: 300px;
+    /*文字陰影設定*/
+    text-shadow: 1px 1px 2px #eca56b;
+    /*邊框陰影設定*/
+    box-shadow: 0 0 10px #dbae70;
+   /*漸層設定*/
+    background-image: linear-gradient(to bottom,#fbfbfb,rgb(238, 171, 69));
+    
     background-attachment: fixed;
     background-position: right top;
     background-repeat: no-repeat;
-    
 }
+
+a{
+    color:#0800e9
+}
+
 main{
     width:980px;
     background-color: rgb(246, 203, 188);
     margin:0px auto;
     padding:40px 80px;
-    border:1px solid #f6bb9e
+    border:1px solid #f68c58
 
 }
+
 h2{
     padding:10px;
     margin-bottom: 30px;
@@ -49,7 +62,10 @@ h2{
 h1,header,footer,nav{
     text-align: center;
 }
-
 {
 text-shadow: 2px 1px 3px #333333;
 }
+
+
+
+
