--- a/liink.css
+++ b/liink.css
@@ -5,17 +5,18 @@ body{
     background-size: 1550px 230px;
         color: rgb(0, 0, 0); 
     margin: 0px;
-}
-nav{
+   }
+div{
     background-color: #f8f3a5;
     font-size: 130%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
 }
 h1{
     font-size: 250%;
     text-align: center;
     line-height:1;
-    
+   
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin: 10px auto;
     padding: 30px;
@@ -27,15 +28,24 @@ h1{
     float: left;
     margin-right: 20px;
 }
+.imgR{
+    float: right;
+    margin-left: 20px;
+}
 .clear{
     clear: both;
 }
 a{
-    color:#0e50d2
+    color:#0f25e8
 }
 
-.clear{
-    clear: both;
+#contents{
+    width: 960px;
+    margin: 40px auto;
+    padding: 40px 80px;
+    border: 4px solid #532e00;
+    background-color: #faf8de;
+}
 }
 main{
     width:980px;
@@ -45,49 +55,43 @@ main{
     border:1px solid #f68c58
 
 }
-ul{
-
-}
-.menu li{
-    list-style-type: none;
-    border:1px solid #94c8b1;
-    display: inline-block;
-    width: 180px;
-
-    }
-    .menu a{
-        display: block;
-        padding: 10px;
-        background: #0e50d2;
-        border-radius: 8px;
-        color: #f68c58;
-        text-decoration: none;
-    }
 h2{
+   
     padding:10px;
     margin-bottom: 30px;
-    
+    border: 1px dotted #784200;
     border-left: 10px solid rgb(236, 184, 147);
     color: #de974a
-
+    
 }
 .round{
     border-radius: 50%;
 }
 h1,header,footer,nav{
     text-align: center;
-}
-{
-text-shadow: 2px 1px 3px #333333;
-}
 
 
-a[href^="mailto:"]::after{
-    content:url(img/郵件.png);
-    margin-left: 5px;
-    vertical-align: middle;
-    
-}
+
+.menu ul{
+        width: 960px;
+        margin: 40px auto;
+        list-style-type: none;
+        border:1px solid #e388f1;
+        display: inline-block;
+        width: 180px;
+        margin: 0pt;
+        }
+.menu a{
+            display: block;
+            padding: 10px;
+            background: #cd30d3;
+            color: #cb74d1;
+            border-radius: 8px;
+            text-decoration: none;
+        }
+.menu a:hover {
+        background: #f68c58;
+    }
 
 
 
