--- a/liink.css
+++ b/liink.css
@@ -3,7 +3,7 @@
 body{
     background-color: #faf8de;
     background-size: 1550px 230px;
-        color: rgb(0, 0, 0); 
+    color: rgb(0, 0, 0); 
     margin: 0px;
    }
 div{
@@ -24,6 +24,7 @@ h1{
     background-position: right top;
     background-repeat: no-repeat;
 }
+
 section{
     padding: 10px;
     font-size: 20px;
@@ -69,5 +70,5 @@ h2{
 .round{
     border-radius: 50%;
 }
-h1,header,footer,nav{
+h1,header,footer{
     text-align: center;
