--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @charset "utf-8";   
 
 body{
+    display: inline;
+    margin: 10px;
     background-color: rgb(253, 255, 235);
     background-image: url(img/網頁背景.jpg);
     background-attachment: fixed;
@@ -9,6 +11,9 @@ body{
     color: blueviolet; 
     margin: 0px;
 }
+
+
+
 
 h1{
     /*標題文字設定*/
@@ -72,11 +77,7 @@ margin-left: 3px;
 vertical-align:muddle;
 }
 
-a[href^="mailto:"]::after{
-    content:url(img/郵件.png);
-    margin-left: 5px;
-    vertical-align: middle;
-    
+
 }
 .menu li{
     list-style-type: none;
@@ -94,6 +95,7 @@ a[href^="mailto:"]::after{
     background: #94c8b1;
 }
 .
+
 
 
 
