--- a/liink.css
+++ b/liink.css
@@ -105,7 +105,7 @@ nav li a:hover{
 		visibility:visible;
 }
 
-div{
+header{
     background-color: #f8f3a5;
     font-size: 130%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -129,7 +129,20 @@ section{
     font-size: 20px;
 }
 footer{
-    font-size: 22px;
+    font-size: 15px;
+}
+footer{
+    width: 80%;
+    height: 300px;
+    background-color: rgb(192, 241, 152);
+    clear: both;
+
+}
+.post{
+    font-size: -50px;
+    text-align: center;
+    padding: 10px;
+    float: left;
 }
 .imgL{
     float: left;
